Spring Boot e Angular JS - Aula 02 Parte 02 - Adicionando conexão com o banco e mapeando entidade Cliente

--- a/hightech-spring-api/src/main/resources/application.properties
+++ b/hightech-spring-api/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=8087
+
+#Conexao com o banco
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost/db_hightech_api
+spring.datasource.username=jkavdev
+spring.datasource.password=123456
+
+#Propriedades do Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
