--- a/hightech-spring-api/src/main/resources/application.properties
+++ b/hightech-spring-api/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=123456
 
 #Propriedades do Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
